wasm/target/release/build/anyhow-56d26865f6112c11/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/ayomide/Desktop/rustproj/yaimp-rs/wasm/target/release/build/anyhow-56d26865f6112c11/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
